Complete table name

--- a/dist.ini
+++ b/dist.ini
@@ -16,4 +16,7 @@ copyright_holder = Steven Haryanto
 Rinci=1.1.50
 
 perl=5.010001
-;Log::Any=0
+experimental=0
+List::MoreUtils=0
+Log::Any=0
+SHARYANTO::Complete::Util=0
