[dist] Move spec prereqs from RuntimeRequires to DevelopRecommends to reduce deps but still allow indicating spec requirement

--- a/dist.ini
+++ b/dist.ini
@@ -9,11 +9,12 @@ name    = DBIx-FunctionalAPI
 ;Test::More=0.98
 
 [Prereqs]
-;!lint_prereqs assume-used # spec
-Rinci=1.1.50
-
 perl=5.010001
 experimental=0
 List::MoreUtils=0
 Log::Any::IfLOG=0
 Complete::Util=0.12
+
+[Prereqs / DevelopRecommends]
+;!lint_prereqs assume-used # spec
+Rinci=1.1.50
