--- a/dist.ini
+++ b/dist.ini
@@ -10,7 +10,12 @@ name    = DBIx-FunctionalAPI
 
 [Prereqs]
 perl=5.010001
+
 experimental=0
+strict=0
+warnings=0
+
+Exporter=0
 List::MoreUtils=0
 Log::Any::IfLOG=0.07
 Complete::Util=0.12
