--- a/dist.ini
+++ b/dist.ini
@@ -20,6 +20,5 @@ List::MoreUtils=0
 Log::Any::IfLOG=0.07
 Complete::Util=0.12
 
-[Prereqs / DevelopRecommends]
-;!lint_prereqs assume-used # spec
-Rinci=1.1.50
+[Prereqs / DevelopSuggests]
+_SPEC::Rinci=1.1.50
