[dist] Fix expressing follow-spec prereq relationship with x_spec

--- a/dist.ini
+++ b/dist.ini
@@ -20,5 +20,7 @@ List::MoreUtils=0
 Log::Any::IfLOG=0.07
 Complete::Util=0.12
 
-[Prereqs / DevelopSuggests]
-_SPEC::Rinci=1.1.50
+[Prereqs / DevelopX_spec]
+-phase=develop
+-relationship=x_spec
+Rinci=1.1.50
