--- a/dist.ini
+++ b/dist.ini
@@ -10,17 +10,16 @@ name    = DBIx-FunctionalAPI
 
 [Prereqs]
 perl=5.010001
-
 experimental=0
 strict=0
 warnings=0
-
+Complete::Util=0.57
 Exporter=0
 List::MoreUtils=0
-Log::Any::IfLOG=0.07
-Complete::Util=0.12
+Log::ger=0.011
 
 [Prereqs / DevelopX_spec]
 -phase=develop
 -relationship=x_spec
 Rinci=1.1.50
+
